traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:10: error: ')' expected but ';' found.
  if(x==0){setPose(0,y+1;return true)}
                        ^TraversalZigZag:10: error: ';' expected but ')' found.
  if(x==0){setPose(0,y+1;return true)}
                                    ^